--- a/Portfolio.API/appsettings.json
+++ b/Portfolio.API/appsettings.json
@@ -7,9 +7,10 @@
   },
   "AllowedHosts": "*",
   
-    "ConnectionStrings": {
-      "DefaultConnection": "server=localhost;port=3306;database=PortfolioDB;user=root;password=Ayala055!"
-    }
+   "ConnectionStrings": {
+  "DefaultConnection": ""
+}
+
   
 
 }
